force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Name_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Name_3_Type__c</fullName>
    <label>Name 3 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth Name</fullName>
            </value>
            <value>
                <fullName>Full Name</fullName>
                <label>Current/Active Name</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Graduation Name</fullName>
            </value>
            <value>
                <fullName>Nickname</fullName>
            </value>
            <value>
                <fullName>Other Name</fullName>
            </value>
            <value>
                <fullName>Used to Delete a name</fullName>
            </value>
            <value>
                <fullName>Potential	Potential</fullName>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>