force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/NCOA_Code__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Code__c</fullName>
    <label>NCOA Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>