force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/One_ID__c.field-meta.xml
<CustomField>
    <fullName>One_ID__c</fullName>
    <description>Unique ID populated from Agilon One</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID populated from Agilon One</inlineHelpText>
    <label>Donor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>