force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Phone_1_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Address_Type__c</fullName>
    <label>Phone 1 Address Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>