force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Phone_1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Start_Date__c</fullName>
    <label>Phone 1 Start Date</label>
    <type>Date</type>
</CustomField>