force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Phone_1_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Status__c</fullName>
    <defaultValue>&quot;Current&quot;</defaultValue>
    <label>Phone 1 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>