force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Phone_3_Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Phone_3_Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 3 Is Preferred</label>
    <type>Checkbox</type>
</CustomField>