force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Phone_3_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_3_Start_Date__c</fullName>
    <label>Phone 3 Start Date</label>
    <type>Date</type>
</CustomField>