force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/PII_Compliance_Type_2__c.field-meta.xml
<CustomField>
    <fullName>PII_Compliance_Type_2__c</fullName>
    <label>PII Compliance Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>