force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/PII_Type_1__c.field-meta.xml
<CustomField>
    <fullName>PII_Type_1__c</fullName>
    <label>PII Type 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>