force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/PII_Value_2__c.field-meta.xml
<CustomField>
    <fullName>PII_Value_2__c</fullName>
    <label>PII Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>