force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Platform_1__c.field-meta.xml
<CustomField>
    <fullName>Platform_1__c</fullName>
    <label>Platform 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>