force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/RT_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>RT_Data_Source__c</fullName>
    <description>Maintains the data source from the RT row that created this interim. if the interim row did not come from RT this will be blank.</description>
    <label>RT Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>