force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Service_Indicator_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator_Start_Date__c</fullName>
    <label>Service Indicator Start Date</label>
    <type>Date</type>
</CustomField>