force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Service_Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator_Value__c</fullName>
    <label>Service Indicator Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>