force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Service_Indicator_Value_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator_Value_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Indicator Value</label>
    <referenceTo>ucinn_ascendv2__Service_Indicator_Value__c</referenceTo>
    <relationshipLabel>Interims</relationshipLabel>
    <relationshipName>Interims</relationshipName>
    <type>Lookup</type>
</CustomField>