force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Social_Handle_1__c.field-meta.xml
<CustomField>
    <fullName>Social_Handle_1__c</fullName>
    <label>Social Handle 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>