force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Social_Media_Data_Soure__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Data_Soure__c</fullName>
    <label>Social Media Data Soure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>