force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Social_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Social_URL_1__c</fullName>
    <label>Social URL 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>