force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Stephens_ID__c.field-meta.xml
<CustomField>
    <fullName>Stephens_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stephens ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>