force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Student_Class__c.field-meta.xml
<CustomField>
    <fullName>Student_Class__c</fullName>
    <label>Student Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>