force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/TKE_Scroll_Number__c.field-meta.xml
<CustomField>
    <fullName>TKE_Scroll_Number__c</fullName>
    <externalId>true</externalId>
    <label>TKE Scroll Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>