force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Transfer_Student__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Student</label>
    <type>Checkbox</type>
</CustomField>