force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account ID that matches this Interim__C object</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interims</relationshipLabel>
    <relationshipName>Interims_Account</relationshipName>
    <type>Lookup</type>
</CustomField>