force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Address_1_Line_4__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_1_Line_4__c</fullName>
    <label>Address 1 Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>