force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Address_1_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_1_Type__c</fullName>
    <inlineHelpText>Valid Address Type Values: 
Home;
Business</inlineHelpText>
    <label>Address 1 Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>