force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Admit_Term__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Admit_Term__c</fullName>
    <label>Admit Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>