force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Age__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Age__c</fullName>
    <label>Age</label>
    <length>10</length>
    <type>Text</type>
</CustomField>