force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>