force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Business_Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Business_Title__c</fullName>
    <description>workday</description>
    <label>Business Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>