force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Cancer_Center_Physician_CMM_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Cancer_Center_Physician_CMM_Code__c</fullName>
    <label>Cancer Center Physician CMM Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>