force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Comments_to_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comments_to_Supervisor__c</fullName>
    <inlineHelpText>Required for Supervisor Review</inlineHelpText>
    <label>Comments to Supervisor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>