force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact ID that matches this Interim__C object</description>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interims</relationshipLabel>
    <relationshipName>Interims_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>