force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Country_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Country_2__c</fullName>
    <label>Country 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>