force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__County_Calling_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__County_Calling_Code_2__c</fullName>
    <label>County Calling Code 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>