force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Current_Class_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Current_Class_Level__c</fullName>
    <label>Current Class Level</label>
    <length>200</length>
    <type>Text</type>
</CustomField>