force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Self Reported</fullName>
            </value>
            <value>
                <fullName>Interim Interface</fullName>
            </value>
            <value>
                <fullName>Google Place API</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>SmartyStreets API</fullName>
            </value>
            <value>
                <fullName>USPS API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>