force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deceased_Date__c</fullName>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>