force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Default_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Weekly_Hours__c</fullName>
    <label>Default Weekly Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>