force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_ID__c</fullName>
    <description>Since most Interfaces would include a CRS ID, this field is separate and prioritized among other potential External IDs</description>
    <externalId>true</externalId>
    <label>Donor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>