force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__DPV_Vacant__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DPV_Vacant__c</fullName>
    <description>Indicates that a delivery point was active in the past but is currently vacant (in most cases, unoccupied over 90 days) and is not receiving deliveries. This status is often obtained when mail receptacles aren&apos;t being emptied and are filling up, so mail is held at the post office for a certain number of days before the delivery point is marked vacant.

Y — Address is vacant.
N — Address is not vacant.
[blank] — Address was not submitted for vacancy verification.</description>
    <inlineHelpText>Indicates that a delivery point was active in the past but is currently vacant (in most cases, unoccupied over 90 days) and is not receiving deliveries. This status is often obtained when mail receptacles aren&apos;t being emptied and are filling up, so mail is held at the post office for a certain number of days before the delivery point is marked vacant.

Y — Address is vacant.
N — Address is not vacant.
[blank] — Address was not submitted for vacancy verification.</inlineHelpText>
    <label>DPV Vacant</label>
    <length>1</length>
    <type>Text</type>
</CustomField>