force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Duplicate_Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Duplicate_Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies which interim is duplicate to the current interim.</description>
    <inlineHelpText>The duplicate interim that was not set to manual review.</inlineHelpText>
    <label>Duplicate Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Interims (Duplicate Interim)</relationshipLabel>
    <relationshipName>Interims1</relationshipName>
    <type>Lookup</type>
</CustomField>