force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Duplicate_Interim_Found__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Duplicate_Interim_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if there are duplicate Interims found.</description>
    <inlineHelpText>True, if duplicate Interim found; false, otherwise.</inlineHelpText>
    <label>Duplicate Interim Found</label>
    <type>Checkbox</type>
</CustomField>