force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Duplicate_Most_Recent_Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Duplicate_Most_Recent_Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Most Recent Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Interims (Duplicate Most Recent Interim)</relationshipLabel>
    <relationshipName>Interims</relationshipName>
    <type>Lookup</type>
</CustomField>