force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Echo_Board_Speciality_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Echo_Board_Speciality_1__c</fullName>
    <label>Echo Board Speciality 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>