force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Echo_Speciality__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Echo_Speciality__c</fullName>
    <label>Echo Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>