force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Echo_Suffix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Echo_Suffix__c</fullName>
    <label>Echo Suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>