force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Education_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Education_Level__c</fullName>
    <label>Education Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>