force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Email_1_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_1_Type__c</fullName>
    <inlineHelpText>Valid Email Types: 
Home;
Business;
Secondary E-mail</inlineHelpText>
    <label>Email 1 Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>