force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employee_First_Hired_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employee_First_Hired_Date__c</fullName>
    <description>The date that the employee was first hired (first time employment in school)</description>
    <label>Employee_First_Hired_Date</label>
    <type>Date</type>
</CustomField>