force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>