force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employee_Type__c</fullName>
    <description>workday</description>
    <label>Employee Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>