force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employer__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employer__c</fullName>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>