force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employer_University_CEEB__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employer_University_CEEB__c</fullName>
    <label>Employer University CEEB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>