force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employment_Status__c</fullName>
    <label>Employment Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>