force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Enrolled_Term__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enrolled_Term__c</fullName>
    <label>Enrolled Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>