force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>