force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__First_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__First_Name__c</fullName>
    <description>First Name</description>
    <inlineHelpText>First Name</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>