force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Full_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Full_Name_Formula__c</fullName>
    <formula>IF ( ISBLANK(  ucinn_ascendv2__Salutation__c ), &apos;&apos;, ucinn_ascendv2__Salutation__c  &amp; &apos; &apos;) &amp;
IF ( ISBLANK(  ucinn_ascendv2__First_Name__c ), &apos;&apos;, ucinn_ascendv2__First_Name__c &amp; &apos; &apos;) &amp;
IF ( ISBLANK(  ucinn_ascendv2__Middle_Name__c ), &apos;&apos;, ucinn_ascendv2__Middle_Name__c &amp; &apos; &apos;) &amp;
IF ( ISBLANK(  ucinn_ascendv2__Last_Name__c ), &apos;&apos;, ucinn_ascendv2__Last_Name__c  &amp; &apos; &apos;) &amp;
IF ( ISBLANK(  ucinn_ascendv2__Suffix__c ), &apos;&apos;, ucinn_ascendv2__Suffix__c &amp; &apos; &apos;)</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>