force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Gender__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gender__c</fullName>
    <label>Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>