force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Geolocation_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Geolocation_1__c</fullName>
    <label>Geolocation 1</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>