force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Geolocation_1_Latitude__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Geolocation_1_Latitude__c</fullName>
    <label>Geolocation 1 Latitude</label>
    <length>40</length>
    <type>Text</type>
</CustomField>